# rag_pageindex

./: .copier-answers.yml  .env.example  .gitignore  CLAUDE.md  README.md  RESEARCH.md  config.yaml  git-autocommit.skill  langgraph.json  pyproject.toml
.claude/skills/git-autocommit/: SKILL.md
deploy/langfuse/: .env.example  README.md  docker-compose.yml
docs/: agent.md  document-structure-generation.md
examples/results/: earthmover_structure.json
notebooks/: my_notebook.ipynb
src/rag_pageindex/: hello_world.py  main.py
src/rag_pageindex/agent/: __init__.py  graph.py  tools.py  tracing.py  vlm.py
src/rag_pageindex/core/: config.py  constants.py  logging.py
src/rag_pageindex/pageindex/: NOTICE  __init__.py  client.py  json_extract.py  observability.py  pipeline.py  retrieve.py  structured_responses.py
src/rag_pageindex/pageindex/llm/: __init__.py  anthropic_client.py  factory.py  openai_compatible_client.py  protocol.py  retry.py  tracing_client.py
src/rag_pageindex/pageindex/pdf/: __init__.py  reader.py  renderer.py
src/rag_pageindex/pageindex/prompts/: __init__.py  add_page_number_to_toc.j2  agent_system.j2  check_title_appearance.j2  check_title_appearance_in_start.j2  check_toc.j2  check_toc_extraction_complete.j2  check_toc_transformation_complete.j2  detect_page_index.j2  extract_toc_content.j2  extract_toc_continue.j2  generate_doc_description.j2  generate_node_summary.j2  generate_node_summary_from_children.j2  generate_toc_continue.j2  generate_toc_init.j2  generate_toc_vlm_range.j2  loader.py  (+8 more)
tests/: conftest.py  test_main.py
(+14 files in other folders)
